@@ -1,3 +1,12 @@
+10-12-2025
+- fix omori calendar project script
+- move install.sh to scripts
+- add plasma support
+- fix desktop-theme-sync failing to eval if there are no users with home-manager
+- move desktop-theme-sync to modules/nixos/mixins/desktop.nix
+- fix an issue with plasma where cursor would reset when selected due to default stylix configuration.
+
+
 10-08-2025
 - add swww flake input
 - revamp swww:
